--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,197 +1,760 @@
 /* import "./post_ans"; */
+html
 
-.main {
+body{
+  font-family: "Arial";
+}
+
+.balloon1 {
+  position: relative;
+  justify-content: center;
+  align-content: flex-start;
+  width: 350px;
+  height: 550px;
+  /* border: solid 1px red; */
+}
+
+.balloon-img1 {
+  position: absolute;
+  justify-content: center;
+  /* border: solid 1px yellow;   */
+}
+
+.ballooncontainer {
+  position: absolute;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  margin: 50px;  /*上の余白*/
+  margin-left: 75px;
+  width: 180px;
+  height: 230px;
+  /* border: solid 1px magenta; */
+}
+
+.first {
   display: flex;
   flex-direction: column;
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
+
+  font-size: 30px;
+  font-weight: bold;
+  color: #FAFF00;
+  -webkit-text-stroke: 1px black;
+
+  width: 100%;
+  height: 50px;
+  /* border: solid 1px green; */
+}
+
+.text {
+  font-size: 20px;
+  width: 100%;
+  height: 175px;
+  /* border: solid 1px blue; */
+}
+.main1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: auto;
   /* border: red 1px solid; */
 }
 
-  .postframe {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    width: 90%;
-    height: auto;
-    /* border: black 1px solid; */
-  }
+.postframe {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  height: auto;
+  /* border: black 1px solid; */
+}
 
-    .textframe {
-      display: flex;
-      /* flex-wrap: wrap; */
-      flex-direction: column;
-      justify-content: center;
-      /* align-items: center; */
-      /* margin-top: 50px;
+.textframe {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  /* margin-top: 50px;
+        margin-bottom: 50px; */
+  width: 85%;
+  height: auto;
+  /* border: purple 1px solid; */
+}
+
+.ue {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: left;
+  left: 0;
+  top: 0;
+  padding-left: 85px;
+  width: 50%;
+  height: 80px;
+  /* border: seagreen 1px solid; */
+}
+
+.circle {
+  position: absolute;
+  /* display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; */
+  left: 0px;
+  top: 0px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: lightgray;
+}
+
+.userid {
+  position: absolute;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  top: 0;
+  padding-top: 0.3em;
+  padding-left: 15px;
+  width: auto;
+  height: 1em;
+  font-size: 25px;
+  /* border: springgreen 1px solid; */
+}
+
+.date {
+  position: absolute;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  bottom: 0;
+  padding-bottom: 0.3em;
+  padding-left: 15px;
+  font-size: 18px;
+  width: auto;
+  height: 1em;
+  /* border: rosybrown 1px solid; */
+}
+
+.question {
+  display: flex;
+  align-items: left;
+  margin-left: 10%;
+  /* margin-right: 10%;
+        margin-top: 5px;
+        margin-bottom: 5px; */
+  width: auto;
+  height: auto;
+  word-break: break-all;
+  font-size: 25px;
+  /* border: navy 1px solid; */
+}
+
+.tagframe {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-items: center;
+  left: 0;
+  /* 仮付け */
+  /* width: 100%; */
+  height: 50px;
+  padding-left: 2%;
+  padding-right: 2%;
+  /* border: gold 1px solid; */
+}
+
+.hashtag {
+  /* position: absolute; */
+  display: flex;
+  align-items: center;
+  left: 0%;
+  height: 100%;
+  margin-right: 0.5em;
+  font-size: 20px;
+  /* border: sienna 1px solid; */
+}
+
+.button {
+  /* position: absolute; */
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-items: center;
+  right: 0;
+  bottom: 0;
+  /* width: 300px; */
+  height: 65px;
+  font-size: 25px;
+  /* border: seagreen 1px solid; */
+}
+
+.good {
+  display: flex;
+  align-items: center;
+  left: 0;
+  /* margin-bottom: 3px; */
+  height: 100%;
+  /* border: lime 1px solid; */
+}
+
+.g_count {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 50px;
+  height: 100%;
+  color: darkorange;
+  /* border: tomato 1px solid; */
+}
+
+.bad {
+  display: flex;
+  align-items: center;
+  /* margin-top: 3px; */
+  height: 100%;
+  /* border: lime 1px solid; */
+}
+
+.b_count {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  /* right: 0; */
+  height: 100%;
+  color: darkorange;
+  /* border: tomato 1px solid; */
+}
+
+.kontentu {
+  /* 装飾だけの予定 */
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 55px;
+  right: 0;
+  bottom: 0;
+  /* border: seagreen 1px solid; */
+}
+
+.block {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  /* border: plum 1px solid; */
+}
+.main2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  /* border: red 1px solid; */
+}
+
+.postframe {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  height: auto;
+  /* border: black 1px solid; */
+}
+
+.textframe {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  /* margin-top: 50px;
       margin-bottom: 50px; */
-      width: 85%;
-      height: auto;
-      /* border: purple 1px solid; */
-    }
-      .ue {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        /* justify-content: center; */
-        align-items: left;
-        left: 0;
-        top: 0;
-        padding-left: 85px;
-        width: 50%;
-        height: 80px;
-        /* border: seagreen 1px solid; */
-      }
-        .circle {
-          position: absolute;
-          /* display: flex;
+  width: 85%;
+  height: auto;
+  /* border: purple 1px solid; */
+}
+
+.ue {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: left;
+  left: 0;
+  top: 0;
+  padding-left: 85px;
+  width: 50%;
+  height: 80px;
+  /* border: seagreen 1px solid; */
+}
+
+.circle {
+  position: absolute;
+  /* display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center; */
-          left: 0px;
-          top: 0px;
-          width: 80px;
-          height: 80px; 
-          border-radius: 50%;
-          background: lightgray;
-        }
-        .userid {
-          position: absolute;
-          display: flex;
-          justify-content: left;
-          align-items: center;
-          top: 0;
-          padding-top: 0.3em;
-          padding-left: 15px;
-          width: auto;
-          height: 1em;
-          font-size: 25px;
-          /* border: springgreen 1px solid; */
-        }
-        .date {
-          position: absolute;
-          display: flex;
-          justify-content: left;
-          align-items: center;
-          bottom: 0;
-          padding-bottom: 0.3em;
-          padding-left: 15px;
-          font-size: 18px;
-          width: auto;
-          height: 1em;
-          /* border: rosybrown 1px solid; */
-        }
+  left: 0px;
+  top: 0px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: lightgray;
+}
 
-      .question {
-      display: flex;
-      align-items: left;
-      margin-left: 10%;
-      /* margin-right: 10%;
+.userid {
+  position: absolute;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  top: 0;
+  padding-top: 0.3em;
+  padding-left: 15px;
+  width: auto;
+  height: 1em;
+  font-size: 25px;
+  /* border: springgreen 1px solid; */
+}
+
+.date {
+  position: absolute;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  bottom: 0;
+  padding-bottom: 0.3em;
+  padding-left: 15px;
+  font-size: 18px;
+  width: auto;
+  height: 1em;
+  /* border: rosybrown 1px solid; */
+}
+
+.question {
+  display: flex;
+  align-items: left;
+  margin-left: 10%;
+  /* margin-right: 10%;
       margin-top: 5px;
       margin-bottom: 5px; */
-      width: auto;
-      height: auto;
-      word-break: break-all;
-      font-size: 25px;
-      /* border: navy 1px solid; */
-      }
-      
-      .tagframe {
-        display: flex;
-        flex-wrap: wrap;
-        /* justify-content: center; */
-        align-items: center;
-        left: 0; /* 仮付け */
-        /* width: 100%; */
-        height: 50px;
-        padding-left: 2%;
-        padding-right: 2%;
-        /* border: gold 1px solid; */
-      }
-        .hashtag {
-          /* position: absolute; */
-          display: flex;
-          align-items: center;
-          left: 0%;
-          height: 100%;
-          margin-right: 0.5em;
-          font-size: 20px;
-          /* border: sienna 1px solid; */
-        }
-      
-      .button {
-        /* position: absolute; */
-        display: flex;
-        flex-wrap: wrap;
-        /* justify-content: center; */
-        align-items: center;
-        right: 0;
-        bottom: 0;
-        /* width: 300px; */
-        height: 65px;
-        font-size: 25px;
-        /* border: seagreen 1px solid; */
-      }
-        .good {
-          display: flex;
-          align-items: center;
-          left: 0;
-          /* margin-bottom: 3px; */
-          height: 100%;
-          /* border: lime 1px solid; */
-        }
-        .g_count {
-          display: flex;
-          align-items: center;
-          margin-left: 10px;
-          margin-right: 50px;
-          height: 100%;
-          color: darkorange;
-          /* border: tomato 1px solid; */
-        }
-        .bad {
-          display: flex;
-          align-items: center;
-          /* margin-top: 3px; */
-          height: 100%;
-          /* border: lime 1px solid; */
-        }
-        .b_count {
-          display: flex;
-          align-items: center;
-          margin-left: 10px;
-          /* right: 0; */
-          height: 100%;
-          color: darkorange;
-          /* border: tomato 1px solid; */
-        }
+  width: auto;
+  height: auto;
+  word-break: break-all;
+  font-size: 25px;
+  /* border: navy 1px solid; */
+}
 
-    .kontentu {   /* 装飾だけの予定 */
-      position: absolute;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      width: 120px;
-      height: 55px;
-      right: 0;
-      bottom: 0;
-      /* border: seagreen 1px solid; */
-    }
-      .block {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        right: 0;
-        /* border: plum 1px solid; */
-      }
+.tagframe {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-items: center;
+  left: 0;
+  /* 仮付け */
+  /* width: 100%; */
+  height: 50px;
+  padding-left: 2%;
+  padding-right: 2%;
+  /* border: gold 1px solid; */
+}
 
-  hr {
+.hashtag {
+  /* position: absolute; */
+  display: flex;
+  align-items: center;
+  left: 0%;
+  height: 100%;
+  margin-right: 0.5em;
+  font-size: 20px;
+  /* border: sienna 1px solid; */
+}
+
+.kaitoudesu {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  top: 50px;
+  width: 90px;
+  height: 70px;
+  /* border: seagreen 1px solid; */
+}
+
+.kaitou {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  height: 100%;
+  font-size: 25px;
+  /* border: royalblue 1px solid; */
+}
+
+.kaitousuu {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  height: 100%;
+  font-size: 25px;
+  color: darkorange;
+  /* border:darkorange 1px solid; */
+}
+
+.kontentu {
+  /* 装飾だけの予定 */
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 55px;
+  right: 0;
+  bottom: 0;
+  /* border: seagreen 1px solid; */
+}
+
+.kyouyu {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  /* border:palevioletred 1px solid; */
+}
+
+.block {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  /* border: plum 1px solid; */
+}
+
+/* hr {
     margin-top: 20px;
     width: 100%;
     border: 1px solid lightgray;
-  }
+  } */
+
+.kaitoubotann {
+  font-size: 30px;
+  width: 30%;
+  height: 100px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: skyblue;
+}
+html
+
+body{
+  font-family: "Arial";
+}
+
+.question_frame {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  padding-top: 30px;
+  /* border: solid 1px red; */
+}
+
+.upload_img_button{
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;  /* 横軸に対する位置 */
+  align-content: center;    /* 縦軸に対する位置 */
+  padding: 2em 2em; /*上下　左右*/
+  width: 20%;
+  height: 170px;
+  background-color: #cccccc;
+  box-shadow: 0 5px 0 #aaaaaa;
+  border-radius: 40px;
+  transition: 0.3s;
+  right: 5%;
+}
+
+.upload_img {
+  display: flex;
+  flex-direction: column;   /* 主軸が縦※flexの主軸は横のためこれで縦にする */
+  align-items: center;
+  /* border: solid 1px blue; */
+  width: 100%;
+
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  /* border: solid 1px green; */
+}
+
+.text {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 5%;
+  /* border: solid 1px pink; */
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  padding-left: 0.5em;
+  font-size: 25px;
+  color: black;
+  width: 100%;
+  height: 100px;
+  /* border: solid 1px gold; */
+}
+
+.part1 {
+  display: flex;
+  /* border: solid 1px blue; */
+}
+
+.question_img {
+  display: flex;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  /* border: solid 1px gold; */
+}
+
+.text1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  color: black;
+  /* border: solid 1px gold; */
+}
+
+.part2 {
+  display: flex;
+  /* border: solid 1px blue; */
+}
+
+.attention_img {
+  display: flex;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  /* border: solid 1px gold; */
+}
+
+.text2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  color: black;
+  /* border: solid 1px gold; */
+}
+.txt{
+  /* position: relative; */
+  position: absolute;
+  position:center;
+  height: 400px;;
+  width: 90%;
+  align-items: center;
+  padding: 1.2em;
+  font-size:20pt;
+  border: 1px solid #FF845E;
+  box-sizing: border-box;
+  background: #ffffff;
+  margin-top: 0.5em 0;
+}
+.txt:focus{
+  height: 300px;;
+  width: 90%;
+  padding: 1.2em;
+  font-size:20pt;
+  border: 3px solid #FF845E;
+  box-sizing: border-box;
+  background: #ffffff;
+  margin: 0.5em 0;
+}
+textarea{
+  border-radius:45px;
+ margin:0 auto;
+  resize: none;
+}
+textarea::placeholder{
+    color: rgb(255, 192, 121);
+}
+.parent{
+  text-align:center;
+ margin:0 auto;
+ }
+ .square {
+  width: 90%;
+  margin:0 auto;
+  height: 600px;
+  background: #C4D8DF;
+}
+.answer {
+  /* text-align: center; */
+  border: 1px dashed #999;
+}
+.sita{
+  position: relative;
+  position: center;
+  bottom: -200px;
+}
+html
+body{
+  font-family: "Arial";
+}
+.question_frame {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  padding-top: 30px;
+  /* border: solid 1px red; */
+}
+.upload_img_button{
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;  /* 横軸に対する位置 */
+  align-content: center;    /* 縦軸に対する位置 */
+  padding: 2em 2em; /*上下　左右*/
+  width: 20%;
+  height: 170px;
+  background-color: #cccccc;
+  box-shadow: 0 5px 0 #aaaaaa;
+  border-radius: 40px;
+  transition: 0.3s;
+  right: 5%;
+}
+.upload_img {
+  display: flex;
+  flex-direction: column;   /* 主軸が縦※flexの主軸は横のためこれで縦にする */
+  align-items: center;
+  /* border: solid 1px blue; */
+  width: 100%;
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+}
+.image {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  /* border: solid 1px green; */
+}
+.text {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 5%;
+  /* border: solid 1px pink; */
+}
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  padding-left: 0.5em;
+  font-size: 25px;
+  color: black;
+  width: 100%;
+  height: 100px;
+  /* border: solid 1px gold; */
+}
+.part1 {
+  display: flex;
+  /* border: solid 1px blue; */
+}
+.question_img {
+  display: flex;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  /* border: solid 1px gold; */
+}
+.text1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  color: black;
+  /* border: solid 1px gold; */
+}
+.part2 {
+  display: flex;
+  /* border: solid 1px blue; */
+}
+.attention_img {
+  display: flex;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  /* border: solid 1px gold; */
+}
+.text2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  color: black;
+  /* border: solid 1px gold; */
+}
+.basho{
+  align-items: center;
+}
+.b{
+  align-items: right;
+  margin:0;
+}
