--- a/styles/globals.css
+++ b/styles/globals.css
@@ -797,3 +797,9 @@ color: #000;
 background-color: #f5f5f5;
 border: 1px solid #ccc;
 }
+
+hr {
+      margin-top: 20px;
+      width: 100%;
+      border: 1px solid lightgray;
+    }
